dependencies {
    implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
}

sourceCompatibility = 1.8

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = ["src/"]
sourceSets.main.resources.srcDirs = ["../assets"]
project.ext.assetsDir = new File("../assets")

test {
    jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
}